blocks/modal.css
.modal {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.5s linear;
  padding: 0 20px;
}

.modal_opened {
  visibility: visible;
  opacity: 1;
}

.modal__container {
  background: #fff;
  padding: 32px 50px;
  max-width: 730px;
  width: 100%;
  box-sizing: border-box;
  position: relative;
  border-radius: 8px;
}

.modal__close-btn {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 32px;
  right: 50px;
  width: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
}

/* .modal__close {
  background: transparent url("../images/exit-Icon.svg") center no-repeat;
  width: 40px;
  height: 40px;
  border: none;
  position: absolute;
  top: 0;
  right: -52.5px;
  opacity: 1;
} */

.modal__close-btn_type_preview {
  background: transparent url("../images/exit-Icon.svg") center no-repeat;
  width: 40px;
  height: 40px;
  border: none;
  position: absolute;
  top: 0;
  right: -52.5px;
  opacity: 1;
}

.modal__content_type_preview {
  padding: 0;
  text-align: center;
  position: relative;
}

.modal__image {
  width: 100%;
  object-fit: contain;
  max-width: 80vw;
  max-height: 80vh;
  border-radius: 8px;
}

.modal__caption {
  padding: 4px 8px;
  margin: 0;
  font-family: "Poppins", Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  color: rgba(255, 255, 255, 1);
  background-color: rgba(33, 33, 33, 1);
  border-radius: 8px;
  width: fit-content;
}
.modal__title {
  margin: 0 0 32px;
  font-weight: 500;
  font-size: 32px;
  line-height: 1;
  font-family: "Poppins", Arial, Helvetica, sans-serif;
  width: 169px;
}

.modal__label {
  display: block;
  flex-direction: column;
  margin-bottom: 32px;
  color: #212121;
  opacity: 0.7;
  font-family: "Poppins", Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 17.6px;
}

.modal__input {
  width: 100%;
  box-sizing: border-box;
  border: 1px solid rgba(33, 33, 33, 0.4);
  border-radius: 8px;
  font-family: "Poppins", Arial, Helvetica, sans-serif;
  font-size: 20px;
  line-height: 1;
  font-weight: 500;
  padding: 16px 12px 16px;
  margin: 8px 0 0;
  color: #212121;
}

.modal__input_type_error {
  border: 1px solid rgba(255, 0, 0, 0.7);
}

.modal__error {
  display: block;
  margin-top: 8px;
  /* correct color and font sizes */
  color: rgba(255, 0, 0, 0.7);
  font-size: 16px;
  line-height: 17.6px;
  font-weight: 500;
}

.modal__submit-btn {
  font-size: 16px;
  line-height: 1;
  width: 100%;
  max-width: 156px;
  padding: 18px 0;
  background-color: #212121;
  color: #fcf5e5;
  border-radius: 8px;
  border: none;
  transition: background 0.3s;
}

.modal__submit-btn_inactive {
  background: rgba(0, 0, 0, 0.4);
  background-repeat: no-repeat;
  background-position: center;
  max-width: 156px;
  width: 100%;
  padding: 18px 0;
}

.modal__submit-btn:hover {
  background: rgba(0, 0, 0, 0.8);
  cursor: pointer;
}

@media screen and (max-width: 627px) {
  .modal {
    padding: 0 10px;
  }
  .modal__container {
    padding: 12px;
  }

  .modal__title {
    font-size: 20px;
    margin: 10px 0 34px;
  }

  .modal__close-btn {
    top: 12px;
    right: 12px;
  }

  .modal__label {
    margin-bottom: 24px;
  }
  .modal__submit-btn {
    width: 100%;
  }
}

@media screen and (max-width: 321px) {
  .modal__submit-btn {
    max-width: 276px;
    width: 100%;
  }

  .modal__input {
    line-height: 16px;
    font-size: 16px;
  }

  .modal__title {
    font-size: 20px;
    line-height: 1;
  }

  .modal__close_type_preview {
    top: -42.5px;
    right: 0;
  }

  .modal__caption {
    font-size: 16px;
    line-height: 19.2px;
  }
}

